[워들] javascript 로직 완성
간단한 워들 게임을 만들었습니다.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
           <img src="assets/delete.svg" alt="" />
         </div>
       </div>
-      <script src="time.js"></script>
+      <script src="js/time.js"></script>
+      <script src="js/real.js"></script>
     </footer>
   </body>
 </html>
